Changed: Repeat notifications for lights on when house empty now replace each other instead of sending a new message each time.

--- a/automations.yaml
+++ b/automations.yaml
@@ -85,6 +85,7 @@
       - service: notify.tom_and_anna
         data:
           data:
+            tag: lights-repeat
             actions:
             - action: LIGHTS_OFF
               title: Turn off lights
