--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -3,6 +3,9 @@ service_account: !include google_service_account.json
 report_state: true
 expose_by_default: false
 entity_config:
+    cover.office_blind:
+      name: "Office Blind"
+      expose: true
     sensor.reu_temperature:
       name: "Reuben temperature"
       expose: true
