Fixed: Main bedroom ceiling light now paired directly to HA via ZHA instead of via Hue

--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -3,6 +3,9 @@ service_account: !include google_service_account.json
 report_state: true
 expose_by_default: false
 entity_config:
+    light.main_bedroom_ceiling:
+      name: "Main bedroom ceiling"
+      expose: true
     cover.office_blind:
       name: "Office Blind"
       expose: true
