Added: Halo projector to light auto-dimming automation Added: Light auto-dimming levels depend on sun elevation (outside brightness) Added: Automations for 2x new Opple light switches Changed: Bedroom light auto-on when door opened depends on same sun elevation as blinds closing, instead of fixed time

--- a/automations.yaml
+++ b/automations.yaml
@@ -252,7 +252,9 @@
   alias: 'TV: Dim lights when playing'
   description: ''
   trigger:
-  - entity_id: media_player.kodi
+  - entity_id:
+    - media_player.kodi
+    - media_player.halo
     platform: state
     to: playing
     id: kodi
@@ -268,12 +270,29 @@
   action:
   - choose:
     - conditions:
+      - condition: and
+        conditions:
+        - condition: trigger
+          id: kodi
+        - condition: numeric_state
+          entity_id: sun.sun
+          attribute: elevation
+          below: -2
+      sequence:
+      - service: light.turn_on
+        data:
+          brightness_pct: 15
+          transition: 3
+        target:
+          entity_id: light.living_room
+    - conditions:
       - condition: trigger
         id: kodi
       sequence:
       - service: light.turn_on
         data:
-          brightness_pct: 15
+          brightness_pct: 5
+          transition: 3
         target:
           entity_id: light.living_room
     - conditions:
@@ -293,18 +312,21 @@
   - entity_id:
     - media_player.kodi
     - media_player.living_room_tv
+    - media_player.halo
     from: playing
     platform: state
     to: paused
   - entity_id:
     - media_player.kodi
     - media_player.living_room_tv
+    - media_player.halo
     from: playing
     platform: state
     to: idle
   - entity_id:
     - media_player.kodi
     - media_player.living_room_tv
+    - media_player.halo
     from: paused
     platform: state
     to: idle
@@ -457,6 +479,8 @@
     event_type: mobile_app_notification_action
     event_data:
       action: WASHER_EMPTIED
+  - platform: tag
+    tag_id: 1871444b-f9e8-4e6f-9f0f-8310cae21918
   condition: []
   action:
   - entity_id: automation.washer_notify_done
@@ -1014,12 +1038,17 @@
   mode: single
 - id: '1603313648727'
   alias: Bedtime - phone charging
-  description: Turn off light, turn on lamp, when phone starts charging
+  description: Turn off light, turn on lamp, when phone or watch starts charging
   trigger:
   - type: plugged_in
     platform: device
     device_id: cf4ceb29a2e7464abe92c738f5983356
     entity_id: binary_sensor.toms_phone_is_charging
+    domain: binary_sensor
+  - type: plugged_in
+    platform: device
+    device_id: de894c337f5d68c3d20de7af161e8cef
+    entity_id: binary_sensor.huawei_watch_2_is_charging
     domain: binary_sensor
   condition:
   - condition: time
@@ -1325,10 +1354,12 @@
     entity_id: binary_sensor.main_bedroom_door
     domain: binary_sensor
   condition:
-  - condition: sun
-    after: sunset
   - condition: time
     before: '22:30'
+  - condition: numeric_state
+    entity_id: sun.sun
+    attribute: elevation
+    below: -2
   action:
   - service: light.turn_on
     data:
@@ -1337,7 +1368,11 @@
       entity_id:
       - light.main_bedroom_ceiling
       - light.test_bulb
-  - delay: 00:05:00
+  - delay:
+      hours: 0
+      minutes: 7
+      seconds: 0
+      milliseconds: 0
   - service: light.turn_off
     data: {}
     target:
@@ -2061,3 +2096,226 @@
 
         '
   mode: single
+- id: '1664188667644'
+  alias: Main Bedroom Opple Light Switch
+  description: ''
+  use_blueprint:
+    path: Jarne_Roussard/aqara-opple-4-buttons-for-zha.yaml
+    input:
+      remote: 4ea4829aee92ea2f29100c58eb2e75da
+      button_top_left_single_press:
+      - type: turn_off
+        device_id: d5286caed6a01b144913383573d6a242
+        entity_id: light.main_bedroom_ceiling
+        domain: light
+      button_top_left_double_press:
+      - service: light.turn_off
+        data: {}
+        target:
+          area_id: main_bedroom
+      button_top_left_hold_in:
+      - type: turn_on
+        device_id: d5286caed6a01b144913383573d6a242
+        entity_id: light.main_bedroom_ceiling
+        domain: light
+        brightness_pct: 30
+      button_top_right_single_press:
+      - type: turn_on
+        device_id: d5286caed6a01b144913383573d6a242
+        entity_id: light.main_bedroom_ceiling
+        domain: light
+        brightness_pct: 100
+      button_top_right_double_press:
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          area_id: main_bedroom
+      button_top_right_hold_in:
+      - type: turn_on
+        device_id: d5286caed6a01b144913383573d6a242
+        entity_id: light.main_bedroom_ceiling
+        domain: light
+        brightness_pct: 60
+      button_bottom_left_single_press:
+      - type: turn_off
+        device_id: b9c88a37811e285dc2b594f847e29cf1
+        entity_id: light.main_bedroom_bloom
+        domain: light
+      button_bottom_left_double_press:
+      - service: light.turn_off
+        data: {}
+        target:
+          area_id: main_bedroom
+      button_bottom_left_hold_in:
+      - type: turn_on
+        device_id: b9c88a37811e285dc2b594f847e29cf1
+        entity_id: light.main_bedroom_bloom
+        domain: light
+        brightness_pct: 30
+      button_bottom_right_single_press:
+      - type: turn_on
+        device_id: b9c88a37811e285dc2b594f847e29cf1
+        entity_id: light.main_bedroom_bloom
+        domain: light
+        brightness_pct: 100
+      button_bottom_right_double_press:
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          area_id: main_bedroom
+      button_bottom_right_hold_in:
+      - type: turn_on
+        device_id: b9c88a37811e285dc2b594f847e29cf1
+        entity_id: light.main_bedroom_bloom
+        domain: light
+        brightness_pct: 60
+- id: '1664293977688'
+  alias: Office Opple Light Switch
+  description: ''
+  use_blueprint:
+    path: Jarne_Roussard/aqara-opple-4-buttons-for-zha.yaml
+    input:
+      remote: 445eb9cadaf00ed25eadaabdda187eb9
+      button_top_left_single_press:
+      - type: turn_off
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+      button_top_left_double_press:
+      - type: turn_off
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+      - type: turn_off
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      - type: turn_off
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+      - type: turn_off
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+      button_top_left_hold_in:
+      - service: light.turn_on
+        data:
+          brightness_pct: 29
+        target:
+          device_id: cffb061e300b83a901a07ad99b0abaa4
+      button_top_right_single_press:
+      - type: turn_on
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+        brightness_pct: 100
+      button_top_right_double_press:
+      - type: turn_on
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      - type: turn_on
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+        brightness_pct: 100
+      - type: turn_on
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+        brightness_pct: 100
+      - type: turn_on
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+        brightness_pct: 100
+      button_top_right_hold_release: []
+      button_top_right_hold_in:
+      - service: light.turn_on
+        data:
+          brightness_pct: 60
+        target:
+          device_id: cffb061e300b83a901a07ad99b0abaa4
+      button_bottom_left_single_press:
+      - type: turn_off
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+      - type: turn_off
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      - type: turn_off
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+      button_bottom_left_double_press:
+      - type: turn_off
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      - type: turn_off
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+      - type: turn_off
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+      - type: turn_off
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+      button_bottom_left_hold_in:
+      - service: light.turn_on
+        data:
+          brightness_pct: 30
+        target:
+          device_id:
+          - b4b84b4ae3fab4400b0e133c18da5980
+          - 63e528584034c3704aa0ea7b8d0c6adb
+      button_bottom_right_single_press:
+      - type: turn_on
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+        brightness_pct: 100
+      - type: turn_on
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      - type: turn_on
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+        brightness_pct: 100
+      button_bottom_right_double_press:
+      - type: turn_on
+        device_id: b4b84b4ae3fab4400b0e133c18da5980
+        entity_id: light.annas_desk
+        domain: light
+        brightness_pct: 100
+      - type: turn_on
+        device_id: a4b059569334cd311559fcb877f3deba
+        entity_id: light.toms_desk_master
+        domain: light
+        brightness_pct: 100
+      - type: turn_on
+        device_id: cffb061e300b83a901a07ad99b0abaa4
+        entity_id: light.second_bedroom_light
+        domain: light
+      - type: turn_on
+        device_id: 63e528584034c3704aa0ea7b8d0c6adb
+        entity_id: switch.toms_monitor_light
+        domain: switch
+      button_bottom_right_hold_in:
+      - service: light.turn_on
+        data:
+          brightness_step: 60
+        target:
+          device_id:
+          - b4b84b4ae3fab4400b0e133c18da5980
+          - 63e528584034c3704aa0ea7b8d0c6adb
