--- a/automations.yaml
+++ b/automations.yaml
@@ -2328,3 +2328,40 @@
           device_id:
           - b4b84b4ae3fab4400b0e133c18da5980
           - 63e528584034c3704aa0ea7b8d0c6adb
+- id: '1665133208840'
+  alias: Close office blind when bright
+  description: ''
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.cactus_illuminance
+    for:
+      hours: 0
+      minutes: 2
+      seconds: 0
+    above: 9000
+  condition: []
+  action:
+  - service: cover.set_cover_position
+    data:
+      position: 60
+    target:
+      device_id: d900db50135294c1549bb9a9ecde74b0
+  mode: single
+- id: '1665133518037'
+  alias: Open office blind when not bright
+  description: ''
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.cactus_illuminance
+    for:
+      hours: 0
+      minutes: 5
+      seconds: 0
+    below: 9000
+  condition: []
+  action:
+  - service: cover.open_cover
+    data: {}
+    target:
+      device_id: d900db50135294c1549bb9a9ecde74b0
+  mode: single
