Removed `mon` from workday sensor exclusions

--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -37,7 +37,7 @@
   province: England
 - platform: workday
   name: workday_anna
-  excludes: [sat, sun, mon, wed, holiday]
+  excludes: [sat, sun, wed, holiday]
   country: GB
   province: England
 
